[tool.poetry]
name = "asyncloud"
version = "0.1.0"
description = "An asynchronous SoundCloud API wrapper that doesn't need an API key."
license = "Unlicense"
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
