[tool.poetry]
name = "asyncloud"
version = "0.1.0"
description = "An asynchronous SoundCloud API wrapper that doesn't need an API key."
license = "Unlicense"
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = {version = "^3.7.3", extras = ["speedups"]}
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
